bug: wrong phone country code fixed

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -3,7 +3,7 @@
   "fullName": "اسمك الكامل",
   "fullNameHelper": "من فضلك، يرجى كتابة اسمك ولقبك",
   "phoneNumber": "رقم هاتفك",
-  "phoneNumberHelper": "من فضلك، يرجى كتابة رقم الهاتف بهذه الطريقة +90XXXXXXXXX",
+  "phoneNumberHelper": "الرجاء إدخال رقم هاتفك",
   "yourLanguage": "اللغة",
   "yourLanguageHelper": "من فضلك، يرجى كتابة اللغة التي تتحدث بها",
   "registerText": "تسجيل الدخول",
