--- a/lang/ku.json
+++ b/lang/ku.json
@@ -3,7 +3,7 @@
     "fullName": "Navê Te Tev",
     "fullNameHelper": "Ji kerema xwe nav û paşnavê xwe binivîse",
     "phoneNumber": "Hejmara telefona te",
-    "phoneNumberHelper": "Ji kerema xwe hejmara telefona xwe bi vî rengî binivîsin +90XXXXXXXXX",
+    "phoneNumberHelper": "Ji kerema xwe numara telefona xwe binivîse",
     "yourLanguage": "Ez Baş Dizanim",
     "yourLanguageHelper": "Ji kerema xwe zimanên ku hûn baş dizanin binivîsin",
     "registerText": "Qeyd Bibe",
