--- a/lang/ru.json
+++ b/lang/ru.json
@@ -3,7 +3,7 @@
   "fullName": "Полное Имя",
   "fullNameHelper": "Введите ваши имя и фамилию",
   "phoneNumber": "Сотоый Номер",
-  "phoneNumberHelper": "Введите ваш номер телефона в формате +90XXXXXXXXX",
+  "phoneNumberHelper": "Пожалуйста, введите свой номер телефона",
   "yourLanguage": "Бегло говорю",
   "yourLanguageHelper": "Напишите языки, которыми вы хорошо владеете.",
   "registerText": "Регистрация",
