fix: Must choose at least 2 languages when creating/editing translator profile

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -70,7 +70,7 @@
   "welcome": "Hoşgeldin",
   "interpreterList": "Tercüman Listesi",
   "nameSurname": "İsim & Soyisim",
-  "chooseLanguage": "Dil seç",
+  "chooseLanguage": "En az 2 dil seçiniz",
   "translationLanguage": "Tercüme Dili",
   "contantInformation": "İletişim Bilgileri",
   "messenger": "Messenger",
