fix: Revert choose languages text

--- a/lang/en.json
+++ b/lang/en.json
@@ -70,7 +70,7 @@
   "welcome": "welcome",
   "interpreterList": "Interpreter List",
   "nameSurname": "Name Surname",
-  "chooseLanguage": "Choose at least 2 languages",
+  "chooseLanguage": "Choose language",
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
   "messenger": "Messenger",
