fix: Contact info typo

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -72,7 +72,7 @@
   "nameSurname": "الاسم الكامل",
   "chooseLanguage": "اختر اللغة",
   "translationLanguage": "لغة الترجمة",
-  "contantInformation": "معلومات الاتصال",
+  "contactInformation": "معلومات الاتصال",
   "messenger": "فيسبوك",
   "whatsapp": "إنستغرام",
   "twitter": "تويتر",
