--- a/lang/en.json
+++ b/lang/en.json
@@ -72,7 +72,7 @@
   "nameSurname": "Name Surname",
   "chooseLanguage": "Choose language",
   "translationLanguage": "Translation Language",
-  "contantInformation": "Contact Information",
+  "contactInformation": "Contact Information",
   "messenger": "Messenger",
   "whatsapp": "WhatsApp",
   "twitter": "Twitter",
