--- a/lang/ku.json
+++ b/lang/ku.json
@@ -72,7 +72,7 @@
     "nameSurname": "Navê Binivîse",
     "chooseLanguage": "Zimanê hilbijêre",
     "translationLanguage": "Zimanê wergerê",
-    "contantInformation": "Agahdariya girêdayî",
+    "contactInformation": "Agahdariya girêdayî",
     "messenger": "Messenger",
     "whatsapp": "WhatsApp",
     "twitter": "Twitter",
