--- a/lang/ru.json
+++ b/lang/ru.json
@@ -72,7 +72,7 @@
   "nameSurname": "Полное Имя",
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
-  "contantInformation": "Контактная информация",
+  "contactInformation": "Контактная информация",
   "messenger": "Messenger",
   "whatsapp": "Инстаграм",
   "twitter": "Твиттер",
