--- a/lang/tr.json
+++ b/lang/tr.json
@@ -72,7 +72,7 @@
   "nameSurname": "İsim & Soyisim",
   "chooseLanguage": "Dil seç",
   "translationLanguage": "Tercüme Dili",
-  "contantInformation": "İletişim Bilgileri",
+  "contactInformation": "İletişim Bilgileri",
   "messenger": "Messenger",
   "whatsapp": "WhatsApp",
   "twitter": "Twitter",
