bug: break whatsapp link fixed

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,9 +26,9 @@
   "faq3Body": "Please do not disclose personal information such as banking, credit card, or identification information as this is vital for ensuring security.",
   "faq4Header": "What are my responsibilities as an Interpreter?",
   "faq4Body": "1- Working based on volunteering: As a Interpreter, it is expected of you to work as a volunteer without requesting payment. This is natural since most aid organizations and humanitarian activities are done for free.\r\n\r\n2- Showing sensitivity: As an Interpreter, you are working with people who are experiencing emergency situations such as depression, anxiety, fear, etc. Therefore, you need to be sensitive and empathetic to provide the best possible service.\r\n\r\n3- Respecting cultural differences: It should not be forgotten that people may have different cultural and religious backgrounds. Therefore, it is important to respect and make an effort to understand cultural differences.\r\n\r\n4- Protecting confidentiality: As an Interpreter, you are responsible for protecting people's personal information. Therefore, you should only use their information for official purposes and keep this information secure.\r\n\r\n5- Providing accurate and understandable translations: As an Interpreter, you need to make an effort to accurately and understandably convey the source language text to the target language. This includes using the correct choice of words, grammatical structure, and proper use of language.",
-  "cantFind": "Did you not find the answer you were looking for??",
+  "cantFind": "Did you not find the answer you were looking for?",
   "reachSupport": "Please reach out to our support team.",
-  "contactUsButton": "Get in Touch.",
+  "contactUsButton": "Get in Touch",
   "interpreterFormAccess": "You can fill out the form below to become a Interpreter. You can find the list of Interpreters here.",
   "firstNameInputTitle": "First Name",
   "firstNameInputHint": "Please enter first name..",
