--- a/lang/ku.json
+++ b/lang/ku.json
@@ -106,5 +106,6 @@
     "accessDisabledErrorText": "Girêdana vê hesabê tûnebûye",
     "signInHintText": "Hesaba heye?",
     "emailTakenErrorText": "Hesab bi vî e-nivîsî tê vekirin",
-    "termsAndConditionsLabel": "Şêwaznameya xizmetê"
+    "termsAndConditionsLabel": "Şêwaznameya xizmetê",
+    "requestHelp": "Alîkarî xwestin"
 }
