--- a/lang/tr.json
+++ b/lang/tr.json
@@ -106,5 +106,6 @@
   "accessDisabledErrorText": "Bu hesaba erişim geçici olarak devre dışı bırakıldı",
   "signInHintText": "Zaten bir hesabınız var mı?",
   "emailTakenErrorText": "Bu e-posta adresiyle bir hesap zaten var",
-  "termsAndConditionsLabel": "Kullanım Koşulları"
+  "termsAndConditionsLabel": "Kullanım Koşulları",
+  "requestHelp": "Yardım İste"
 }
